--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "husky": "^8.0.3",
     "i18next": "^23.7.7",
     "i18next-browser-languagedetector": "^7.2.0",
+    "mobx": "^6.12.0",
+    "mobx-react-lite": "^4.0.5",
+    "mobx-state-tree": "^5.4.0",
     "react": "18.2.0",
     "react-i18next": "^13.5.0",
     "react-native": "0.72.7",
