--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,8 @@
 {
   "extends": "@tsconfig/react-native/tsconfig.json",
   "compilerOptions": {
+    "jsx": "react",
     "baseUrl": "./",
-    "paths": {
-      // root
-      "@src/*": ["./src/*"],
-      // assets
-      "@assets/*": ["./assets/*"],
-      "@components/*": ["./src/components/*"],
-      "@constants": ["./src/constants"],
-      "@navigation/*": ["./src/navigation/*"],
-      "@screens/*": ["./src/screens/*"]
-    }
+    "paths": {}
   }
 }
